# NgspiceSimServer

./: .gitignore  CMakeLists.txt  Dockerfile  NgspiceSimServer.cpp  README.md  simserver.h  test.py
.reuse/: dep5
api/: .gitrepo
